fixed footer taking spacing in grid, changed div to section

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 body{
     display: grid;
     place-items: center;
+    grid-template-rows: 1fr auto;
     margin: 0;
     padding: 0;
     font-family: "Outfit", sans-serif;
@@ -56,4 +57,8 @@ body{
     line-height: 120%;
     font-size: 15px;
     margin-bottom: var(--space-200);
+}
+
+footer{
+    padding: var(--space-200);
 }
